tests/NormalTests/paczka1/small_fuzzy/47190470.err
Error in line 2: dyzM6nmN3C A598 70,9
Error in line 4: SS4A6 S587 6,9
Error in line 8: dyzM6nmN3C A363 47,3
Error in line 10: SS4A6 A363 99,9
